# SecureFileTool_CybersecProject

./: .gitignore  CMakeLists.txt  README.md  config.txt
src/: main.cpp
